--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     -->
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" />
-  <title>React App</title>
+  <title>T R A D E R</title>
 </head>
 
 <body>
